# irregular-metrics

./: .gitignore  .pre-commit-config.yaml  README.md  install.bat  install.sh  package-lock.json  package.json  run.bat  run.sh  tv.pub
backend/: db_utils.py  main.py  manage_db.py  models.py  pyproject.toml  seed_data.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AdminPanel.tsx  Dashboard.tsx  Gauge.tsx  MetricCard.tsx
